--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
     "debug": "*",
     "express": "~4.0.0",
     "lodash": "^4.0.1",
+    "mkdirp": "^0.5.1",
+    "nodegit": "^0.9.0",
     "shelljs": "^0.3.0"
   }
 }
