--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "url": "http://studiofonkel.nl"
   },
   "dependencies": {
+    "async": "^1.5.2",
     "body-parser": "*",
     "colors": "^1.0.3",
     "debug": "*",
