--- a/package.json
+++ b/package.json
@@ -16,7 +16,9 @@
     "express-handlebars": "^3.0.0",
     "lodash": "^4.0.1",
     "mkdirp": "^0.5.1",
+    "ncp": "^2.0.0",
     "nodegit": "^0.9.0",
+    "path": "^0.12.7",
     "shelljs": "^0.3.0"
   }
 }
