--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
     "debug": "*",
     "express": "~4.0.0",
     "express-handlebars": "^3.0.0",
+    "grunt": "0.4.5",
+    "grunt-cli": "0.1.13",
     "lodash": "^4.0.1",
     "mkdirp": "^0.5.1",
     "ncp": "^2.0.0",
@@ -21,5 +23,15 @@
     "path": "^0.12.7",
     "rimraf": "^2.5.1",
     "shelljs": "^0.3.0"
+  },
+  "devDependencies": {
+    "grunt-autoprefixer": "^3.0.3",
+    "grunt-browser-sync": "^2.2.0",
+    "grunt-contrib-clean": "^0.7.0",
+    "grunt-contrib-copy": "^0.8.2",
+    "grunt-contrib-sass": "^0.9.2",
+    "grunt-contrib-watch": "^0.6.1",
+    "grunt-express-server": "^0.5.1",
+    "load-grunt-tasks": "^3.4.0"
   }
 }
