--- a/package.json
+++ b/package.json
@@ -1,16 +1,15 @@
 {
   "name": "git-hook-fonkel",
-  "description": "",
-  "version": "0.1.1",
-  "author": {
-    "name": "Daniel Beeke",
-    "email": "daniel@studiofonkel.nl",
-    "url": "http://studiofonkel.nl"
+  "description": "Using Git hook",
+  "version": "0.2.0",
+  "scripts": {
+    "postinstall": "touch .env"
   },
   "dependencies": {
     "async": "^1.5.2",
     "body-parser": "*",
     "colors": "^1.0.3",
+    "crypto": "^1.0.1",
     "debug": "*",
     "dotenv": "^2.0.0",
     "express": "~4.0.0",
